--- a/css/main.css
+++ b/css/main.css
@@ -12,11 +12,13 @@ html, body {
 div.header {
 	background-color: #6EB5D5;
 	width: 100%;
+	height: 8vw;
 	margin: 0vw;
 }
 
 div.content {
 	width: 100%;
+	height: 100%;
 	margin: 0vw;
 	display: flex;
 }
@@ -24,18 +26,21 @@ div.content {
 div.padding {
 	background-color: #7BA0B8;
 	width: 15%;
+	height: 100%;
 	margin: 0vw;
 }
 
 div.description {
 	background-color: #FEFEFE;
 	width: 55%;
+	height: 100%;
 	margin: 0vw;
 }
 
 div.external_links {
 	background-color: #7BA0B8;
 	width: 30%;
+	height: 100%;
 	margin: 0vw;
 	display: inline-flex;
 	flex-direction: column;
