--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@ html, body {
     margin: 0vw;
 	overflow-x: hidden;
 	overflow-y: auto;
+	display: flex;
 }
 
 div.header {
@@ -23,23 +24,16 @@ div.content {
 	display: flex;
 }
 
-div.padding {
-	background-color: #7BA0B8;
-	width: 15%;
-	height: 100%;
-	margin: 0vw;
-}
-
 div.description {
 	background-color: #FEFEFE;
-	width: 55%;
+	width: 75%;
 	height: 100%;
 	margin: 0vw;
 }
 
 div.external_links {
 	background-color: #7BA0B8;
-	width: 30%;
+	width: 25%;
 	height: 100%;
 	margin: 0vw;
 	display: inline-flex;
