--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ html, body {
 	overflow-x: hidden;
 	overflow-y: auto;
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 }
 
 div.header {
